Fixed some bugs in fraction`s operators + improved gausses speed